# TFG

./: .gitignore  README.md
codigo/: .env.example  .gitignore  pyproject.toml  requirements-ragas.txt  requirements.txt
codigo/.streamlit/: config.toml
codigo/config/: default.yaml  sources.yaml
codigo/data/processed/: context_cache.json  crawl_report.txt
codigo/data/raw/: crawl_manifest.json
codigo/data/verificado/: calendario_ETSIIT_2025-2026.txt  calendario_TFG_2025-2026.txt  examenes_2025-2026.txt  horario_2025-2026.txt  plan_estudios_2025-2026.txt  plazos_interes_2025-2026.txt  tutores_movilidad_ETSIIT.txt
codigo/eval/: base_gemma.json  base_llama.json  base_qwen.json  eval_dataset.jsonl  rag_gemma.json  rag_llama.json  rag_qwen.json  ragas_gemma.json  ragas_llama.json  ragas_qwen.json
codigo/graia/: __init__.py
codigo/graia/generacion/: __init__.py  citation_validator.py  dedup.py  ollama_client.py  postprocess.py  prompt_builder.py
codigo/graia/indexacion/: __init__.py  embedder.py  vector_store.py
codigo/graia/ingesta/: __init__.py  chunker.py  cleaner.py  contextualizer.py  fetcher.py  horario_parser.py  models.py  parser.py  structured.py
codigo/graia/interfaz/: __init__.py  app.py  (+1 more)
codigo/scripts/: analyze_corpus.py  build_corpus.py  debug_gate.py  debug_retrieval.py  evaluate.py  evaluate_baseline.py  evaluate_ragas.py  export_for_ragas.py  index_corpus.py  inject_doc.py  review_corpus.py  verify_pipeline.py
codigo/tests/: test_bm25.py  test_generacion.py  test_indexacion.py  test_ingesta.py  test_recuperacion.py  test_registro.py
(+11 files in other folders)
