[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "graia"
version = "0.1.0"
description = "Granada Retrieval-Augmented Intelligent Assistant — sistema RAG académico ETSIIT-UGR"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Sergio Medina", email = "sergiomedinam98@gmail.com" }]
keywords = ["rag", "llm", "etsiit", "ugr", "chatbot", "faiss", "ollama"]

dependencies = [
    "faiss-cpu>=1.8.0",
    "sentence-transformers>=3.0.0",
    "requests>=2.32.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.2.0",
    "pymupdf>=1.24.0",
    "pytesseract>=0.3.10",
    "Pillow>=9.5.0",
    "streamlit>=1.36.0",
    "ollama>=0.3.0",
    "pyyaml>=6.0.1",
    "python-json-logger>=2.0.7",
    "tqdm>=4.66.0",
    "pydantic>=2.8.0",
    "rank-bm25>=0.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]
eval = [
    "pandas>=2.2.0",
]

[tool.setuptools.packages.find]
include = ["graia*"]
exclude = ["tests*", "scripts*", "data*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
